# sailboat

./: CMakeLists.txt  README.md  package.xml
include/sailboat/: Fonction.h
launch/: avoidance.launch  challenge1.launch  challenge2.launch  challenge2_version2.launch  challenge3.launch  challenge4.launch  circle.launch  circle2.launch  heading.launch  line_follow.launch  station_keeping.launch  triangle.launch
projet_ML/: sea_floor.ipynb  tp2_cnn_transfer_learning_fine_tuning.ipynb
projet_ML/bras_robotisé/: guide.txt  robotics_toolbox_v0_1_py3.py  simple-arm-paint-v3-2020.lua  simple-arm-paint-v3-2020.ttt  simple_robotic_arm_v3_2020_cmd_ik.py
src/: Fonction.cpp  Fonction.h  README.md  heading_follow.cpp  line_follow.cpp  simu_sailboat.cpp  station_keeping.cpp
src/mission/: area_scanning_challenge.cpp  area_scanning_figure.cpp  boats_area_scanning.cpp  challenge1_figure.cpp  challenge2_figure.cpp  choice.csv  fichier.py  fleet_race.cpp  fonction_choice.py  hide_seek.cpp  qlearning.py  renf_lear.py  stade4.cpp  stat_keeping_mission.cpp  stat_mission2_version2.cpp
src/simulation/: avoidance.cpp  circle.cpp  circle2.cpp  drawwaypoint.cpp  figure_avoid.cpp  figure_sk.cpp  figure_triangle.cpp  heading_follow.cpp  line_follow.cpp  simu_sailboat.cpp  station_keeping.cpp  triangle.cpp
